# calculator

./: README.md
bash/: README.md  calculator.sh
javascript/: package-lock.json
javascript/src/: index.js  utils.js
js/: README.md  package.json
js/src/: index.js
python/: README.md  pyproject.toml
python/calculator/: __init__.py  colors.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs  main.rs
ts/: README.md  deno.json
ts/src/: index.ts  utils.ts
