[tool.poetry]
name = "calculator"
version = "0.1.0"
description = "A simple calculator in python"
authors = ["Anish <anishmandalme1234@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
inquirer = "^2.10.0"
colored = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
